# Devkit-Bootstrapper

./: .gitignore  CMakeLists.txt  README.md
lib/: config.hpp
lib/adjust/: adjust.hpp
lib/help/: help.hpp
lib/install/: install.hpp
lib/uninstall/: uninstall.hpp
lib/util/: sfolders.hpp
src/: CMakeLists.txt  main.cpp
src/adjust/: adjust.cpp
src/help/: help.cpp
src/install/: install.cpp
src/uninstall/: uninstall.cpp
